--- a/src/_includes/partials/lang-switcher.html
+++ b/src/_includes/partials/lang-switcher.html
@@ -1,4 +1,4 @@
 <ul class="lang-switcher">
-  <li><a href="/" hreflang="en" aria-label="English" {{ helpers.getActiveLang('en', lang) | safe }}>en</a></li>
-  <li><a href="/hu/" hreflang="hu" aria-label="Magyar" {{ helpers.getActiveLang('hu', lang) | safe }}>hu</a></li>
+  <li><a href="/" hreflang="en" aria-label="English">en</a></li>
+  <li><a href="/hu/" hreflang="hu" aria-label="Magyar">hu</a></li>
 </ul>
