--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -3,7 +3,7 @@
 @forward 'lang-switcher';
 @forward 'navigation';
 @forward 'hero';
-@forward 'projects';
+@forward 'project-card';
 @forward 'container';
 @forward 'blog-card';
 @forward 'info-card';
