--- a/src/_includes/partials/site-footer.html
+++ b/src/_includes/partials/site-footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="site-footer">
   <div class="info-card">
     <h3 class="info-card__title">{{ site[lang].name }}</h3>
     <p class="info-card__value">{{ site[lang].profession }}</p>
