--- a/src/scss/components/_lang-switcher.scss
+++ b/src/scss/components/_lang-switcher.scss
@@ -24,7 +24,7 @@
     width: 2rem;
 
     &:hover {
-      background-color: #f9f9f9;
+      background-color: hsl(0 0% 98%);
     }
 
     &[aria-current='page'] {
