--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -5,6 +5,8 @@
 @forward 'hero';
 @forward 'project-card';
 @forward 'container';
+@forward 'tag-list';
+@forward 'pagination';
 @forward 'blog-card';
 @forward 'info-card';
 @forward 'footer';
