--- a/src/scss/config/_config.scss
+++ b/src/scss/config/_config.scss
@@ -17,5 +17,6 @@
   $font-family-base: #{'Figtree', sans-serif},
   $font-family-heading: #{'Space Mono', monospace},
   $container-width: 50rem,
-  $line-height-heading: calc(2px + 2.75ex + 2px)
+  $line-height-heading: calc(2px + 2.75ex + 2px),
+  $transition-duration: 0
 );
