--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -1,8 +1,8 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-  <div class="post">
-    <h1 class="post-title">{{ title }}</h1>
+  <div class="l-page">
+    <h1 class="l-page__title">{{ title }}</h1>
     <div class="post-content">
       {{ content | safe }}
     </div>
