--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -14,7 +14,7 @@
   }
 
   &__body {
-    --spacer: #{spruce.spacer(l)};
+    --spacer: #{spruce.spacer(xl)};
     @include spruce.layout-stack(var(--spacer));
     margin-inline: auto;
     max-width: 55rem;
