--- a/src/_includes/layouts/posts.html
+++ b/src/_includes/layouts/posts.html
@@ -17,7 +17,7 @@
             </h2>
             <div class="blog-card__meta">
               {% if post.data.date %}
-                <time datetime="{{ post.data.date | w3DateFilter }}">{{ post.data.date | dateFilter }}</time>
+                <time datetime="{{ post.data.date | w3DateFilter }}">{{ post.data.date | dateFilter('en') }}</time>
               {% endif %}
               {% include "partials/tags.html" %}
             </div>
