--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -5,6 +5,7 @@
 @forward 'hero';
 @forward 'project-card';
 @forward 'container';
+@forward 'prism';
 @forward 'tag-list';
 @forward 'pagination';
 @forward 'blog-card';
