--- a/src/scss/config/_config.scss
+++ b/src/scss/config/_config.scss
@@ -4,6 +4,19 @@
   $colors: (
     base: (
       text: hsl(0 0% 0%)
+    ),
+    prism: (
+      color: hsl(243 14% 29%),
+      background: hsl(0 0% 98%),
+      comment: hsl(225 14% 46%),
+      punctuation: hsl(279 50% 53%),
+      namespace: hsl(173 100% 24%),
+      deleted: hsla(1 83% 63% / 0.56),
+      boolean: hsl(0 44% 53%),
+      number: hsl(315 90% 35%),
+      constant: rgb(63, 107, 202),
+      class-name: hsl(0 0% 7%),
+      regex: hsl(1 48% 59%)
     )
   ),
   $settings: (
