--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -3,6 +3,10 @@
 {% block content %}
   <div class="l-post">
     <h1 class="l-post__title">{{ title }}</h1>
+    <div class="l-post__meta">
+      <time datetime="{{ date | w3DateFilter }}">{{ post.data.date | dateFilter('en') }}</time>
+      {% include "partials/tags.html" %}
+    </div>
     <div class="post-content">
       {{ content | safe }}
     </div>
