--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -5,6 +5,7 @@
 
   &__title {
     font-size: spruce.responsive-font-size(5rem, 40, '5vw');
+    line-height: spruce.$line-height-sm;
     margin-block: spruce.spacer-clamp(m, l) spruce.spacer(m);
   }
 
