--- a/src/scss/layout/_post.scss
+++ b/src/scss/layout/_post.scss
@@ -10,9 +10,12 @@
     margin-block: spruce.spacer-clamp(m, l) spruce.spacer(m);
   }
 
-  &__list {
-    @include spruce.layout-stack(l);
-    @include spruce.clear-list;
-    margin-block-start: spruce.spacer(l);
+  &__meta {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: spruce.$font-family-heading;
+    gap: spruce.spacer(m);
+    margin-block-end: spruce.spacer(m);
   }
 }
