--- a/src/css/main.css
+++ b/src/css/main.css
@@ -910,6 +910,7 @@ samp {
 .skip-link {
   inset: -50vh auto auto 1.5rem;
   position: fixed;
+  z-index: 1;
 }
 .skip-link:focus {
   inset-block-start: 1.5rem;
