--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -7,6 +7,11 @@
     font-size: spruce.responsive-font-size(5rem, 40, '5vw');
     line-height: spruce.$line-height-sm;
     margin-block: spruce.spacer-clamp(m, l) spruce.spacer(m);
+
+    &--regular {
+      font-family: spruce.$font-family-base;
+      font-size: spruce.responsive-font-size(4.25rem, 40, '5vw');
+    }
   }
 
   &__list {
