--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -28,17 +28,17 @@
     text-decoration: none;
     text-transform: uppercase;
 
-    &.next,
-    &.prev {
-      padding-inline: 1rem;
-      width: auto;
-    }
-
     &[aria-current='page'],
     &:hover {
       background-color: spruce.color(text);
       color: hsl(0 0% 100%);
       text-decoration: none;
     }
+  }
+
+  .next,
+  .prev {
+    padding-inline: 1rem;
+    width: auto;
   }
 }
