--- a/src/_includes/partials/site-hero.html
+++ b/src/_includes/partials/site-hero.html
@@ -1,4 +1,4 @@
 <div class="site-hero">
-  <img src="{{ coverImage }}" alt="{{ coverAlt }}">
+  <img src="{{ coverImage }}" alt="{{ coverAlt }}" height="220" width="880">
   <div class="site-hero__introduction">{{ content | safe }}</div>
 </div>
