--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,38 @@
+@font-face {
+  font-display: swap;
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../fonts/space-mono-v12-latin-ext_latin-regular.woff2") format("woff2"), url("../fonts/space-mono-v12-latin-ext_latin-regular.woff") format("woff");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../fonts/space-mono-v12-latin-ext_latin-700.woff2") format("woff2"), url("../fonts/space-mono-v12-latin-ext_latin-700.woff") format("woff");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Figtree";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../fonts/figtree-v1-latin-ext_latin-regular.woff2") format("woff2"), url("../fonts/figtree-v1-latin-ext_latin-regular.woff") format("woff");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Figtree";
+  font-style: normal;
+  font-weight: 500;
+  src: local(""), url("../fonts/figtree-v1-latin-ext_latin-500.woff2") format("woff2"), url("../fonts/figtree-v1-latin-ext_latin-500.woff") format("woff");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Figtree";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../fonts/figtree-v1-latin-ext_latin-700.woff2") format("woff2"), url("../fonts/figtree-v1-latin-ext_latin-700.woff") format("woff");
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
   ========================================================================== */
