--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -7,7 +7,11 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" href="/typefesse.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/figtree-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/figtree-500.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/figtree-700.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/space-mono-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/space-mono-700.woff2" as="font" type="font/woff2" crossorigin>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     {% include "partials/meta-info.html" %}
     <link rel="stylesheet" href="/css/main.css?{{ assetHash }}">
