--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,35 +3,35 @@
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../fonts/space-mono-v12-latin-ext_latin-regular.woff2") format("woff2"), url("../fonts/space-mono-v12-latin-ext_latin-regular.woff") format("woff");
+  src: local("Space Mono"), url("../fonts/space-mono-regular.woff2") format("woff2");
 }
 @font-face {
   font-display: swap;
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("../fonts/space-mono-v12-latin-ext_latin-700.woff2") format("woff2"), url("../fonts/space-mono-v12-latin-ext_latin-700.woff") format("woff");
+  src: local("Space Mono"), url("../fonts/space-mono-700.woff2") format("woff2");
 }
 @font-face {
   font-display: swap;
   font-family: "Figtree";
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../fonts/figtree-v1-latin-ext_latin-regular.woff2") format("woff2"), url("../fonts/figtree-v1-latin-ext_latin-regular.woff") format("woff");
+  src: local("Figtree"), url("../fonts/figtree-regular.woff2") format("woff2");
 }
 @font-face {
   font-display: swap;
   font-family: "Figtree";
   font-style: normal;
   font-weight: 500;
-  src: local(""), url("../fonts/figtree-v1-latin-ext_latin-500.woff2") format("woff2"), url("../fonts/figtree-v1-latin-ext_latin-500.woff") format("woff");
+  src: local("Figtree"), url("../fonts/figtree-500.woff2") format("woff2");
 }
 @font-face {
   font-display: swap;
   font-family: "Figtree";
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("../fonts/figtree-v1-latin-ext_latin-700.woff2") format("woff2"), url("../fonts/figtree-v1-latin-ext_latin-700.woff") format("woff");
+  src: local("Figtree"), url("../fonts/figtree-700.woff2") format("woff2");
 }
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
