--- a/src/_includes/partials/meta-info.html
+++ b/src/_includes/partials/meta-info.html
@@ -36,9 +36,9 @@
 {% endif %}
 
 {% if metaDesc %}
-  <meta name="description" content="{{ metaDesc[lang] }}" />
-  <meta name="twitter:description" content="{{ metaDesc[lang] }}" />
-  <meta property="og:description" content="{{ metaDesc[lang] }}" />
+  <meta name="description" content="{{ metaDesc }}" />
+  <meta name="twitter:description" content="{{ metaDesc }}" />
+  <meta property="og:description" content="{{ metaDesc }}" />
 {% endif %}
 
 <link rel="icon" href="/img/favicon.svg" type="image/svg+xml" />
