--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -10,7 +10,7 @@
       font-family: spruce.$font-family-base;
       font-size: spruce.responsive-font-size(2rem, 40);
       font-weight: 400;
-      line-height: spruce.$line-height-heading;
+      line-height: spruce.$line-height-md;
     }
   }
 }
