--- a/src/scss/content/_content.scss
+++ b/src/scss/content/_content.scss
@@ -5,7 +5,7 @@
 
   > p:first-child {
     font-size: spruce.$font-size-lead;
-    line-height: spruce.$line-height-heading;
+    line-height: spruce.$line-height-md;
     max-width: 100%;
   }
 
