--- a/src/css/main.css
+++ b/src/css/main.css
@@ -627,7 +627,7 @@ h6 {
   color: var(--adam-base-color-heading);
   font-family: Space Mono, monospace;
   font-weight: 700;
-  line-height: calc(2px + 2.75ex + 2px);
+  line-height: calc(2px + 2.25ex + 2px);
 }
 
 h1,
@@ -946,6 +946,24 @@ samp {
   margin-block-end: 1.5rem;
 }
 
+.l-404 {
+  margin-inline: auto;
+}
+.l-404 > * {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+.l-404 > * + * {
+  margin-block-start: 1.5rem;
+}
+.l-404__image {
+  max-width: 30rem;
+}
+.l-404__title {
+  font-family: Figtree, sans-serif;
+  font-size: clamp(2.55rem, 5vw, 4.25rem);
+}
+
 .skip-link {
   inset: -50vh auto auto 1.5rem;
   position: fixed;
@@ -1050,7 +1068,7 @@ samp {
   font-family: Figtree, sans-serif;
   font-size: clamp(1.2rem, 2vw + 1rem, 2rem);
   font-weight: 400;
-  line-height: calc(2px + 2.75ex + 2px);
+  line-height: 1.5;
 }
 
 .project-card {
@@ -1318,7 +1336,7 @@ pre[class*=language-] {
 }
 .post-content > p:first-child {
   font-size: clamp(1.2rem, 2vw + 1rem, 2rem);
-  line-height: calc(2px + 2.75ex + 2px);
+  line-height: 1.5;
   max-width: 100%;
 }
 .post-content > * {
