--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -4,7 +4,7 @@
   <div class="l-post">
     <h1 class="l-post__title">{{ title }}</h1>
     <div class="l-post__meta">
-      <time datetime="{{ date | w3DateFilter }}">{{ post.data.date | dateFilter('en') }}</time>
+      <time datetime="{{ date | w3DateFilter }}">{{ date | dateFilter('en') }}</time>
       {% include "partials/tags.html" %}
     </div>
     <div class="post-content">
