Fix tag breaking

--- a/src/scss/components/_tag-list.scss
+++ b/src/scss/components/_tag-list.scss
@@ -2,6 +2,10 @@
 
 .tag-list {
   @include spruce.clear-list;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: spruce.spacer(s);
 
   > * + * {
     margin-block-start: 0;
