--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,38 +1,3 @@
-@font-face {
-  font-display: swap;
-  font-family: "Space Mono";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Space Mono"), url("../fonts/space-mono-regular.woff2") format("woff2");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Space Mono";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Space Mono"), url("../fonts/space-mono-700.woff2") format("woff2");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Figtree";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Figtree"), url("../fonts/figtree-regular.woff2") format("woff2");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Figtree";
-  font-style: normal;
-  font-weight: 500;
-  src: local("Figtree"), url("../fonts/figtree-500.woff2") format("woff2");
-}
-@font-face {
-  font-display: swap;
-  font-family: "Figtree";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Figtree"), url("../fonts/figtree-700.woff2") format("woff2");
-}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
   ========================================================================== */
@@ -840,6 +805,41 @@ samp {
   color: var(--adam-btn-color-primary-foreground);
 }
 
+@font-face {
+  font-display: swap;
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/space-mono-regular.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/space-mono-700.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Figtree";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/figtree-regular.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Figtree";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/figtree-500.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Figtree";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/figtree-700.woff2") format("woff2");
+}
 .l-main__inner {
   align-items: flex-start;
   display: grid;
