--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -10,4 +10,6 @@
 @forward 'pagination';
 @forward 'blog-card';
 @forward 'info-card';
+@forward 'accordion-list';
+@forward 'accordion-card';
 @forward 'footer';
