--- a/src/scss/config/_styles.scss
+++ b/src/scss/config/_styles.scss
@@ -1,6 +1,4 @@
 @use 'sprucecss/scss/spruce';
 
 @include spruce.generate-content;
-@include spruce.generate-btn('.btn');
-
-.btn--primary { @include spruce.btn-variant(primary); }
+@include spruce.generate-form;
