--- a/src/scss/extend/_form.scss
+++ b/src/scss/extend/_form.scss
@@ -8,6 +8,9 @@
   align-items: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   gap: spruce.spacer(s);
+
+  &-space-between {
+    justify-content: space-between;
+  }
 }
