--- a/src/_includes/partials/tools/capitalize.html
+++ b/src/_includes/partials/tools/capitalize.html
@@ -10,10 +10,10 @@
     </div>
     <div class="form-group form-group--btns form-group--btns-space-between">
       <div class="form-group form-group--btns">
-        <button type="submit" class="btn btn--primary">Generate</button>
-        <button type="reset" class="btn btn--secondary">Reset</button>
+        <button type="submit" class="btn btn--primary form-capitalize__generate" disabled>Generate</button>
+        <button type="reset" class="btn btn--secondary form-capitalize__reset" disabled>Reset</button>
       </div>
-      <button type="button" class="btn btn--secondary form-capitalize__copy">Copy</button>
+      <button type="button" class="btn btn--secondary form-capitalize__copy" disabled>Copy</button>
     </div>
   </div>
 </form>
